# GaiTmux

./: .ci_test.txt  .gitignore  CI_TRIGGER.txt  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: build.yml  ci.yml
app/: build.gradle.kts
core/ai/: build.gradle.kts
core/automation/: build.gradle.kts
core/data/: build.gradle.kts
core/domain/: build.gradle.kts
core/engine/: build.gradle.kts
core/executor/: build.gradle.kts
core/platform/: build.gradle.kts
core/security/: build.gradle.kts
core/terminal/: build.gradle.kts
core/terminal/src/rust/: Cargo.toml
core/terminal/src/rust/src/: lib.rs
core/terminal/src/rust/src/complete/: mod.rs
core/terminal/src/rust/src/highlight/: lexer.rs  mod.rs  token.rs
core/terminal/src/rust/src/jni/: mod.rs
core/terminal/src/rust/src/proot/: mod.rs
core/terminal/src/rust/src/pty/: mod.rs
core/terminal/src/rust/src/usb/: adb.rs  fastboot.rs  mod.rs
core/vfs/: build.gradle.kts
docs/plans/: 2026-04-25-aishell-architecture.md  2026-04-25-aishell-design.md  2026-04-25-aishell-implementation-v4.md  2026-04-25-aishell-implementation.md  2026-04-25-proot-design.md  2026-04-25-shell-intelligence-design.md  2026-04-25-shell-intelligence-toolparams.md  2026-04-25-ui-design.md  2026-04-25-vfs-usb-tools.md
feature/devices/: build.gradle.kts
feature/files/: build.gradle.kts
feature/sessions/: build.gradle.kts
feature/settings/: build.gradle.kts
feature/terminal/: build.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+92 files in other folders)
