[package]
name = "aishell-native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.21"
nix = { version = "0.27", features = ["term", "process", "signal", "fs"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"

[profile.release]
opt-level = "z"
lto = true